charts/fileflows/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fileflows
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: fileflows.batsworks.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fileflows
                port:
                  number: 5000
  tls:
    - hosts:
        - fileflows.batsworks.com.br
      secretName: tls-fileflows
